--- a/Documents/CURSO DE HTML Y CSS/trabajo de css/style.css
+++ b/Documents/CURSO DE HTML Y CSS/trabajo de css/style.css
@@ -1,6 +1,9 @@
 *
 {
     margin: 0%;
+    padding: 0%;
+
+
     
 }
 body
@@ -9,9 +12,11 @@ body
     background: turquoise;
 font-style:italic;
 font-size: xx-large;
+
 }
 header
 {
+
     display: flex;
     justify-content: space-between;
     justify-items: auto;
@@ -25,38 +30,53 @@ header
     width: 100%;
     background: rgb(40, 40, 236);
     
+    
 }
 
 .nav
 {
+    list-style: none;
     margin: 10px;
+    
 }
 
-.logo img
+.logo
 {
+    float: left;
 
-    height: 80px;
-    width: 90px;
-
-
+    
 
 }
-
-
-#lateral
+.titulo
 {
-    height: 100%;
-    max-height: max-content;
-    width: 300px;
+    float: left;
+    text-align: center;
+    background-color: rgb(119, 110, 120);
+    width: 80%;
+    height: 500px;
+}
+
+aside
+{
+    text-align: center;
+    height: 500px;
+    background: purple;
+    width: 20%;
     float: right;
-    background:purple;
 }
+
+.clearfix
+{
+    clear: both;
+
+}
+
 footer
 {
-    float: bottom;
-    border: 1px;
+    
+
+    height: 60px;
     font-size: larger;
     font-weight: 700;
-    font-style: inherit;
     background: rgb(86, 64, 107);
 }
