--- a/Documents/CURSO DE HTML Y CSS/trabajo de css/style.css
+++ b/Documents/CURSO DE HTML Y CSS/trabajo de css/style.css
@@ -40,37 +40,80 @@ header
     
 }
 
-.logo
-{
-    float: left;
-
-    
-
-}
 .titulo
 {
     float: left;
     text-align: center;
-    background-color: rgb(119, 110, 120);
+    background-color: rgb(178, 53, 178);
     width: 80%;
-    height: 500px;
+    height: 1000px;
+    border-bottom: 1px solid purple;
 }
 
+.card
+{
+    
+    background-color: #333;
+    border-radius: 10px;
+    outline: 1px solid rgba(255, 255, 255, .5);
+    outline-offset: -8px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, .1);
+    position: relative;
+    overflow: hidden;
+
+}
+
+.card image
+{
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: .6;
+    transition: transform .75s
+
+}
+.card:hover .card image
+{
+    
+    transform: scale(1.15);
+}
 aside
 {
     text-align: center;
-    height: 500px;
+    height: 1000px;
     background: purple;
     width: 20%;
     float: right;
+    border-bottom: 1px solid purple;
 }
+
+
+.flex-container
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    background-color: rgb(178, 53, 178);
+    
+
+}
+
+.flex-container img
+{
+    
+    height: 400px;
+    width: 400px;
+}
+
+
 
 .clearfix
 {
     clear: both;
 
 }
-
 footer
 {
     
@@ -79,4 +122,12 @@ footer
     font-size: larger;
     font-weight: 700;
     background: rgb(86, 64, 107);
+}
+
+.logo img
+{
+    width: 175px;
+    height: 80px;
+    float: left;
+    
 }
