--- a/Documents/CURSO DE HTML Y CSS/trabajo de css/style.css
+++ b/Documents/CURSO DE HTML Y CSS/trabajo de css/style.css
@@ -43,13 +43,23 @@ header
     font-weight: 800;
     
 }
+.nav:hover{
+
+    color: #333;
+    transform: scale(1.02);
+
+}
+.nav:hover::after{
+    transform-origin: left;
+}
+
 .animado
 {
     font-size: 60px;
     color: black;
     -webkit-box-reflect:
     below -20px
-    linear-gradient(transparent, rgba(0,0,0,0,2));
+    linear-gradient(transparent, rgba (0,0,0,0,2));
 }
 .animado span
 {
@@ -114,13 +124,14 @@ header
 aside
 
 {
+
     align-items: center;
     text-align: center;
     list-style: none;
     background: purple;
     width: 100%;
     float: right;
-    border-bottom: 1px solid purple;
+    
 }
 
 
@@ -145,8 +156,17 @@ aside
     
 }
 
+.benefit{
+    margin-top: 30px;
+    display: flex;
+    margin-bottom: 10px;
+    
+}
 
-
+.p{
+    border: solid 2px purple;
+    
+}
 .clearfix
 {
     clear: both;
@@ -185,7 +205,7 @@ footer
     width: 90px;
     height: 90px;
     background: #fff;
-    box-shadow: 0 5px 15px -5px #aaa;
+    box-shadow: 0 5px 15px -5px rgb(132, 89, 89);
     margin: 10px;
     border-radius: 30%;
     overflow: hidden;
@@ -194,10 +214,10 @@ footer
 }
 .smcontainer .btn .i{
     position: relative;
-    z-index: 4;
+    z-index: 6;
     line-height: 90px;
     font-size: 26px;
-    transition: 0.3s ease-in-out;
+    transition: 0.5s ease-in-out;
 }
 
 .smcontainer .btn::before
@@ -215,16 +235,16 @@ footer
 
 .smcontainer .btn:hover
 {
-    color: #fff;
-    transform: scale(1.3);
+    color: rgb(115, 28, 28);
+    transform: scale(1.5);
 }
 
 .smcontainer .btn:hover::before{
 
 
 animation:onHover 0.7s 1;
-left: -10%;
-top: -10%;
+left: -20%;
+top: -20%;
 }
 
 @keyframes onhover {
