--- a/Documents/CURSO DE HTML Y CSS/trabajo de css/style.css
+++ b/Documents/CURSO DE HTML Y CSS/trabajo de css/style.css
@@ -90,6 +90,7 @@ header
     width: 100%;
     height: 1000px;
     border-bottom: 1px solid powderblue;
+    
 }
 
 .card
@@ -103,6 +104,7 @@ header
     box-shadow: 3px 3px 10px rgba(0, 0, 0, .1);
     position: relative;
     overflow: hidden;
+    margin-left: 20px;
 
 }
 
