--- a/Music/practica html y css/style.css
+++ b/Music/practica html y css/style.css
@@ -2,10 +2,12 @@
 *{
     margin: 0%;
     padding: 0%;
+    box-sizing: border-box;
 }
 body{
     color: rgb(143, 202, 202);
-    background-color: antiquewhite;
+    background: #131315;
+    font-family: var(--font-style);
 
 
 
@@ -17,10 +19,7 @@ header
 
     display: flex;
     justify-content: space-between;
-    justify-items: auto;
-    color: rgb(202, 17, 17);
-    align-self: top;
-    align-content: space-between 20px;
+    color: linear-gradient(90deg, #3bd9d9 0%, #8035f0 100%);
     text-align: center;
     font-weight: 900;
     font-size:larger;
@@ -29,12 +28,10 @@ header
     background: linear-gradient(90deg, #3bd9d9 0%, #8035f0 100%);
     margin bottom: 20px;
     padding bottom:20px;
-   
+  
+    
+  }
 
-
-   
-
-}
 h1{
     font-size: 72px;
     background: linear-gradient(90deg, #3bd9d9 0%, #8035f0 100%);
@@ -44,7 +41,7 @@ h1{
 
 .logo img
 {
-    width: 175px;
+    width: 190px;
     height: 80px;
     float: left;
    
@@ -55,17 +52,19 @@ h1{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 40px;
-    height: 36px;
+    width: 50px;
+    height: 46px;
     padding: 10px;
     border-radius: 7px;
     background: #0a66c3;
     cursor: pointer;
+    margin-right: 40px;
 }
 .menu-button span{
     width: 40px;
     height: 4px;
     background: whitesmoke;
+    
 }
 .menu-toggle {
     display: none;
@@ -77,7 +76,8 @@ h1{
     border-radius: 7px;
     padding: 20px;
     width: 150px;
-    margin: 10px auto;
+    margin: 20px auto;
+    margin-right: 20px;
 
 }
 .toggle li{
@@ -87,8 +87,8 @@ h1{
     color: #fafafa;
 }
 .menu-toggle:checked + .toggle{
-    display: block;
-}
+    display: block;}
+      
 .container{
     display: flex;
     height: 100vh;
@@ -96,6 +96,7 @@ h1{
     justify-content: center;
     perspective: 90rem;
     perspective-origin: 30% 60%;
+    margin-top: 20px;
    
 }
 .texto-0{
@@ -105,6 +106,7 @@ h1{
 .div-transform{
     display: flex;
     transform:rotateX(10deg) rotateY(15deg) scale3d(1,1,-0.9) scale(1.1) translateX(50px);
+    margin-top: 20px;
 }
 .card{
     background: url(img/image.jpg) center;
@@ -115,6 +117,7 @@ h1{
   transition: 0.5s ease;
   overflow: hidden;
   transform: translate(0);
+  margin-top: 20px;
 
 
    
@@ -359,17 +362,300 @@ h1{
           font-size: 40px;
           font-weight: 700;
           background: linear-gradient(90deg, #3bd9d9 0%, #8035f0 100%);
-          margin-top: 80px;
+          
       }
-.nav{
-  flex-direction:column;
-  
+      #footer-i{
+        margin-top: 140px;
+      }
+      #footer-l{
+        margin-top: 600px;
+      }
+.
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap');
+:root {
+   --font-style: 'Nunito Sans', sans-serif;
 }
+
+
+
+
+.login-box {
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   width: 400px;
+   padding: 40px;
+   transform: translate(-50%, -50%);
+   background: #242026;
+   box-shadow: 0 15px 25px rgba(143, 124, 236, 0.7);
+   border-radius: 10px;
+}
+
+.login-box h2 {
+   margin: 0 0 30px;
+   padding: 0;
+   color: #fff;
+   text-align: center;
+}
+
+.login-box .user-box input {
+   position: relative;
+   width: 100%;
+   padding: 10px 0;
+   font-size: 16px;
+   color: #fff;
+   margin-bottom: 30px;
+   border: none;
+   border-bottom: 1px solid #fff;
+   outline: none;
+   background: transparent;
+}
+
+.login-box .user-box label {
+   position: relative;
+   left: 0;
+   top: -60px;
+   padding: 10px 0;
+   font-size: 16px;
+   color: #fff;
+   pointer-events: none;
+   transition: .5s;
+}
+
+.login-box .user-box input:focus~label,
+.login-box .user-box input:valid~label {
+   top: -85px;
+   left: 0;
+   color: #8F7CEC;
+   font-size: 12px;
+}
+
+#submit {
+   padding: 10px 20px;
+   color: #CBBDDB;
+   font-size: 16px;
+   text-decoration: none;
+   text-transform: uppercase;
+   overflow: hidden;
+   transition: .5s;
+   letter-spacing: 4px;
+   border: 1px solid #8F7CEC;
+   margin: auto;
+}
+
+#submit:hover {
+   background: #8F7CEC;
+   color: #fff;
+   border-radius: 5px;
+   box-shadow: 0 0 5px #8F7CEC, 0 0 25px #8F7CEC, 0 0 50px #8F7CEC, 0 0 100px #8F7CEC;
+}
+
+.button-form {
+   display: flex;
+   flex-direction: row;
+   margin-top: 20px;
+}
+
+#register {
+   font-size: 14px;
+   text-decoration: none;
+   color: #CBBDDB;
+   margin: auto;
+   width: 60%;
+   text-align: center;
+}
+
+#register a {
+   margin: auto;
+   color: #8F7CEC;
+   text-decoration: none;}
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap');
+ :root {
+    --font-style: 'Nunito Sans', sans-serif;
+}
+
+
+.container-c {
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+button {
+    display: inline-block;
+    position: relative;
+    background: none;
+    border: none;
+    color: #fff;
+    font-size: 18px;
+    cursor: pointer;
+    margin: 20px 30px;
+    background: #1A2929;
+}
+
+.container-c span{
+  display:block;
+  padding: 25px 80px;
+}
+
+button::before,
+button::after {
+    content: "";
+    width: 0;
+    height: 2px;
+    position: absolute;
+    transition: all 0.2s linear;
+    background: #54E6E7;
+}
+
+span::before,
+span::after {
+    content: "";
+    width: 2px;
+    height: 0;
+    position: absolute;
+    transition: all 0.2s linear;
+    background: #54E6E7;
+}
+
+button:hover::before,
+button:hover::after {
+    width: 100%;
+}
+
+button:hover span::before,
+button:hover span::after {
+    height: 100%;
+}
+
+button::after {
+    right: 0;
+    bottom: 0;
+    transition-duration: 0.4s;
+}
+
+button span::after {
+    right: 0;
+    bottom: 0;
+    transition-duration: 0.4s;
+}
+
+button::before {
+    left: 0;
+    top: 0;
+    transition-duration: 0.4s;
+}
+
+button span::before {
+    left: 0;
+    top: 0;
+    transition-duration: 0.4s;
+}
+      
+.registro {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.form {
+  background-color: antiquewhite;
+  width: 400px;
+  border-radius: 8px;
+  padding: 20px 40px;
+  box-shadow: 0 10px 25px rgba(92, 99, 105, .2);
+}
+
+.title {
+  font-size: 50px;
+  margin-bottom: 50px;
+}
+.inputContenedor {
+  position: relative;
+  height: 45px;
+  width: 90%;
+  margin-bottom: 17px;
+}
+.input {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  border: 1px solid #DADCE0;
+  border-radius: 7px;
+  font-size: 16px;
+  padding: 0 20px;
+  outline: none;
+  background: none;
+  z-index: 1;
+}
+
+
+::placeholder {
+  color: transparent;
+}
+.label {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  padding: 0 4px;
+  background-color: antiquewhite;
+  color: #DADCE0;
+  font-size: 16px;
+  transition: 0.5s;
+  z-index: 0;
+}
+.submitb {
+  display: block;
+  margin-left: auto;
+  padding: 15px 30px;
+  border: none;
+  background-color: purple;
+  color: white;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 30px;
+}
+
+.submitb:hover {
+  background-color: #9867C5;
+  transform: translateY(-2px);
+}
+.input:focus + .label {
+  top: -7px;
+  left: 3px;
+  z-index: 10;
+  font-size: 14px;
+  font-weight: 600;
+  color: rgb(77, 84, 212);
+}
+.input:focus {
+  border: 2px solid rgb(40, 19, 146);
+}
+.input:not(:placeholder-shown)+ .label {
+  top: -7px;
+  left: 3px;
+  z-index: 10;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+        
+      
 
    
     @media screen and (max-width:980px) {
         .div-transform {
        display: grid ;}
+       .separacion{
+        margin-bottom: 100px;
+        margin-top: 100px;
+       }
     }
        
     @media screen and (max-width: 767px) {
@@ -397,8 +683,15 @@ h1{
             font-size: 20px;}
             .gallery{
               height: 120px;
-              width: 200px;
-            }
+              width: 200px;}
+              .introduccion{
+                background-image: url(img/backgroundsmall2.jpg);}
+                .container-c{
+                  top: 85% }
+                  .container-c span{
+                    padding: 15px 40px;
+                  }
+                
    }
     
    
