--- a/Music/practica html y css/style.css
+++ b/Music/practica html y css/style.css
@@ -372,8 +372,11 @@ h1{
       #footer-l{
         margin-top: 600px;
       }
-.
 
+      @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap');
+      :root {
+         --font-style: 'Nunito Sans', sans-serif;
+     }
 
 
 .login-box {
