--- a/Music/practica html y css/practica javascript/style.css
+++ b/Music/practica html y css/practica javascript/style.css
@@ -102,6 +102,7 @@ h1{
         height: 250px;
         justify-content: flex-start;
         align-content: center;
+        margin-top: 200px;
 
         margin-left: 50px;
         }
